# sputnik_test_task

./: LICENSE  README.md  docker-compose.dev.yml
backend/: .dockerignore  app.Dockerfile  entrypoint.app.sh  entrypoint.worker.sh  pyproject.toml  worker.Dockerfile
backend/migrations/: env.py
backend/src/app/: main.py
backend/src/app/alerts/: repository.py  schemas.py  service.py
backend/src/app/api/: alerts.py  dependencies.py  errors.py  files.py
backend/src/app/files/: constants.py  repository.py  schemas.py  service.py  storage.py  tasks.py
backend/src/core/: celery.py  config.py  errors.py
backend/src/db/: models.py  session.py  unit_of_work.py
backend/src/worker/: async_runtime.py  celery_app.py  metadata.py  processing.py  signals.py  tasks.py
backend/tests/: test_api_endpoints.py
frontend/: Dockerfile.bun
