[project]
name = "Backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.30.0",
    "celery[redis]>=5.6.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
api = [
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.42.0",
]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]
worker = [
    "flower>=2.0.1",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
